// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Select Snapshot added optional style inline prop 1`] = `
<div
  className="jsx-2953334337"
>
  <select
    className="jsx-2953334337"
    onChange={[Function]}
    style={
      Object {
        "lineHeight": 2,
        "marginTop": 30,
      }
    }
    value=""
  >
    <option
      className="jsx-2953334337"
      default={true}
      disabled={true}
      value=""
    >
      this is a placeholder
    </option>
    <option
      className="jsx-2953334337"
      value="tiger"
    >
      Tiger
    </option>
    <option
      className="jsx-2953334337"
      value="cheetah"
    >
      Cheetah
    </option>
    <option
      className="jsx-2953334337"
      value="giraffe"
    >
      Giraffe
    </option>
    <option
      className="jsx-2953334337"
      value="monkey"
    >
      Monkey
    </option>
    <option
      className="jsx-2953334337"
      value="wolf"
    >
      Wolf
    </option>
    <option
      className="jsx-2953334337"
      value="duck"
    >
      Duck
    </option>
  </select>
</div>
`;

exports[`Component Select Snapshot without arguments, take the default values 1`] = `
<div
  className="jsx-2953334337"
>
  <select
    className="jsx-2953334337"
    onChange={[Function]}
    style={Object {}}
    value=""
  >
    <option
      className="jsx-2953334337"
      default={true}
      disabled={true}
      value=""
    >
      this is a placeholder
    </option>
    <option
      className="jsx-2953334337"
      value="tiger"
    >
      Tiger
    </option>
    <option
      className="jsx-2953334337"
      value="cheetah"
    >
      Cheetah
    </option>
    <option
      className="jsx-2953334337"
      value="giraffe"
    >
      Giraffe
    </option>
    <option
      className="jsx-2953334337"
      value="monkey"
    >
      Monkey
    </option>
    <option
      className="jsx-2953334337"
      value="wolf"
    >
      Wolf
    </option>
    <option
      className="jsx-2953334337"
      value="duck"
    >
      Duck
    </option>
  </select>
</div>
`;
